# vkr-docx

./: .gitignore  CLAUDE.md  README.md  config.default.yaml  install.sh  pyproject.toml  requirements.txt
.claude/commands/: vkr.md
src/vkr_docx/: __init__.py  cli.py  config.py  document.py  parser.py
